Add listEntry in layout

--- a/encyclopedia/templates/encyclopedia/layout.html
+++ b/encyclopedia/templates/encyclopedia/layout.html
@@ -17,6 +17,9 @@
                 <input class="search" type="text" name="q" placeholder="Search Encyclopedia">
                 </form>
                 <div>
+                    <a href="{% url 'listEntry' %}">pages</a>
+                </div>
+                <div>
                     <a href="{% url 'index' %}">Home</a>
                 </div>
                 <div>
