--- a/encyclopedia/static/encyclopedia/style.css
+++ b/encyclopedia/static/encyclopedia/style.css
@@ -76,6 +76,9 @@ form{
   padding: 0.8rem 0.8rem 0.8rem 1.2rem;
   border: none;
   outline: none;
+  width: 100%;
+  font-size: 20px;
+  line-height: 15px;
 }
 
 .search__select {
